--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-dependencies:
-  flutter:
-    sdk: flutter
-  file_picker: ^6.1.1
-  flutter_tts: ^3.8.5
-  pdfx: ^2.6.0
-  pdf_text: ^0.4.0
+Flask==3.0.0          # Lightweight web framework
+pdfplumber==0.10.2    # Extract text from PDFs
+gTTS==2.3.2           # Google Text-to-Speech for audio generation
+pydub==0.25.1         # Convert and save audio
